--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TriviaGame</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="container">
@@ -12,8 +13,8 @@
             <h1 id="gameTitle">Pursuit of Trivia</h1>
         </header>
         <ul>
-            <li>Score :</li>
-            <li>Time :</li>
+            <li id="score">Score :</li>
+            <li id="timeLeft">Time Left:</li>
         </ul>
     </div>
 
@@ -25,6 +26,6 @@
         <button id="startBtn">Start</button>
     </div>
 
-    
+    <script src="script.js"></script>
 </body>
 </html>
